# Projetos

./: .gitmodules  README.md
CIenciaDados/Projeto-1/23-1a-cd-p1-pedro_daniel_gabriel-main/: README.md
CIenciaDados/Projeto-1/23-1a-cd-p1-pedro_daniel_gabriel-main/data/: dados.xlsx
CIenciaDados/Projeto-1/23-1a-cd-p1-pedro_daniel_gabriel-main/notebooks/: relatorio.ipynb
CIenciaDados/Projeto-1/23-1a-cd-p1-pedro_daniel_gabriel-main/notebooks/scraping/: baixar_base_portalbitcoin.ipynb
DesAgil/backend-c-main/backend-c-main/: .project  README.md  pom.xml
DesAgil/frontend-c-main/frontend-c-main/: App.js  package-lock.json  package.json  settings.json
DesAgil/frontend-c-main/frontend-c-main/components/: Index.js  IndexStyles.js  PlaceHolder.js
DesAgil/frontend-c-main/frontend-c-main/components/ComponenteFooter/: FooterStyles.js  footer.js
DesAgil/frontend-c-main/frontend-c-main/components/ComponenteHeader/: Header.js  (+3 more)
DesAgil/frontend-c-main/frontend-c-main/globalStyles/: globalStyle.js  globalStylesGD.js
RoboComp/ProjetoRobo/23b-robcomp-proj-pldg-main/: README.md
SistEmbarcados/Controle/24b-emb-aps-2-b-gaabridjan-7c1b82538e43f386674700f76414716419b2af17/: README.md  braw.avif
SistEmbarcados/Controle/24b-emb-aps-2-b-gaabridjan-7c1b82538e43f386674700f76414716419b2af17/main/: CMakeLists.txt  hc06.c  hc06.h  main.c
SistEmbarcados/Controle/24b-emb-aps-2-b-gaabridjan-7c1b82538e43f386674700f76414716419b2af17/python/: main.py
SistEmbarcados/Genius/24b-emb-aps-1-buhrdjan-main/main/: CMakeLists.txt  diagram.json  i2c_lcd.c  i2c_lcd.h  main.c  wokwi-project.txt
(+22 files in other folders)
